nav dot fix on mobile

--- a/css/nav.css
+++ b/css/nav.css
@@ -62,26 +62,22 @@ _____________________________*/
 
 .one:hover ~ hr {
   visibility: visible;
-  margin-left:11%;
   transition: width 0.1s ease-in-out;
   color: var(--black);
 }
 .two:hover ~ hr {
   visibility: visible;
-  margin-left: 34%;
   transition: width 0.1s ease-in-out;
 }
 
 .three:hover ~ hr {
   visibility: visible;
-  margin-left: 59.5%;
   transition: width 0.1s ease-in-out;
 
 }
 
 .four:hover ~ hr {
   visibility: visible;
-  margin-left: 85.5%;
   transition: width 0.1s ease-in-out;
 
 }
@@ -110,11 +106,47 @@ _____________________________*/
     padding-top: 2rem;
   }
 }
+@media screen and (min-width:501px) {
+.one:hover ~ hr {
+  margin-left:10.2%;
 
+}
+.two:hover ~ hr {
+  margin-left: 34%;
+}
+
+.three:hover ~ hr {
+  margin-left: 59.5%;
+
+}
+
+.four:hover ~ hr {
+  margin-left: 85.5%;
+
+}
+}
 @media screen and (max-width:500px) {
   .nav-link {
     padding: 2.2rem 1rem 0rem 1rem;
   }
+  .one:hover ~ hr {
+    margin-left:10.5%;
+  }
+  .two:hover ~ hr {
+    margin-left: 32.6%;
+
+  }
+
+  .three:hover ~ hr {
+    margin-left: 58.7%;
+  }
+
+  .four:hover ~ hr {
+
+    margin-left: 85%;
+  }
 }
+
+
 
 /* END NAVIGATION STYLES and MEDIA QUERIES */
